tests/test_assets/semantic/invalid/switch/duplicate_case.expected
semantic error at line 11: duplicate switch case
1 semantic error generated.
